# rfp_response_platform

./: .aider.chat.history.md  .aider.input.history  .gitignore  aider-implementation-roadmap.md  readme.md
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
backend/: .aider.chat.history.md  .aider.input.history  .aider.llm.history.md  .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: f32ef90772b7_initial_database_schema.py
backend/app/: celery_app.py
backend/app/models/: README.md  __init__.py  base.py  company.py  company_document.py  document_chunk.py  extracted_question.py  question_document_match.py  report_generation.py  rfp_document.py
backend/app/routes/: __init__.py  auth.py  documents.py  rfp.py
backend/app/schemas/: auth.py  auth_schemas.py  documents.py  rfp.py
backend/app/services/: auth_service.py  document_service.py  rag_document_processor.py  rfp_service.py
backend/app/tasks/: document_tasks.py  rfp_tasks.py
backend/app/utils/: config.py  database.py  dependencies.py  file_storage.py  limiter.py  rate_limiting.py  security.py
backend/scripts/: generate_migration.py  test_db_connection.py  test_models.py
backend/tests/: validate_step6.py
frontend/: rfp-platform-interface.html
