[project]
name = "rfp_backend"
version = "0.1.0"
description = "Add your description here"
readme = "../readme.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "alembic==1.13.1",
    "asyncpg>=0.30.0",
    "bcrypt==4.1.2",
    "black==23.12.1",
    "celery[redis]==5.5.2",
    "cryptography==42.0.0",
    "factory-boy==3.3.1",
    "fastapi==0.115.0",
    "filetype==1.2.0",
    "flake8==7.0.0",
    "httpx==0.26.0",
    "humanize==4.9.0",
    "isort==5.13.2",
    "mypy==1.8.0",
    "nltk==3.8.1",
    "openpyxl==3.1.5",
    "passlib[bcrypt]==1.7.4",
    "pillow==10.2.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pypdf2==3.0.1",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.2",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "python-docx==1.1.2",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-magic==0.4.27",
    "python-multipart==0.0.6",
    "python-slugify==8.0.1",
    "redis==5.0.1",
    "reportlab==4.0.9",
    "requests==2.31.0",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.25",
    "structlog==23.2.0",
    "uvicorn[standard]==0.25.0",
    "validators==0.22.0",
    "weasyprint==61.2",
]
